@@ -465,11 +465,6 @@ name|void
 name|selectAll
 argument_list|()
 block|;
-name|QSize
-name|viewportSizeHint
-argument_list|()
-specifier|const
-block|;
 name|Q_SIGNALS
 operator|:
 name|void
@@ -782,6 +777,12 @@ block|;
 name|void
 name|updateGeometries
 argument_list|()
+block|;
+name|QSize
+name|viewportSizeHint
+argument_list|()
+specifier|const
+name|Q_DECL_OVERRIDE
 block|;
 name|int
 name|sizeHintForColumn
