@@ -34,8 +34,12 @@ QtWidgets
 ---------
 
 - QAbstractScrollArea now has a SizeAdjustPolicy. If it is set to AdjustToContents
-  it will make use of the new protected viewportSizeHint() (binary compatible since it
-  was reserved in Qt5). This function returns a suggested size based on contents.
+  it will make use of the protected viewportSizeHint() virtual function. This
+  function returns a suggested size based on contents. Note that although the
+  viewportSizeHint() virtual function was reserved in 5.0, user code was not
+  supposed to be overriding it (as the function was private and undocumented).
+  Code that was overriding viewportSizeHint() needs to be recompiled against 5.2
+  for this feature to work correctly.
 
 - QTreeView now has setTreePosition to allow the treestructure to show data from other
   columns than logicalindex zero.
